--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>
-            HELLO NI
+            HELLO NI HAO
         </h1>
         <script type="module" src ="/main.js"></script>
     </body>
