--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <h1>
             HELLO NI HAO
         </h1>
-        <script type="module" src ="/main.js"></script>
+        <script type="module" src ="/main.js">import scene</script>
     </body>
 </html>
