--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>
-            HELLO NI HAO
+            HELLO
         </h1>
         <script type="module" src ="/main.js">import scene</script>
     </body>
