--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <title>My JS website</title>
     </head>
     <body>
-        <h1>
-            HELLO
-        </h1>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
         <script type="module" src ="main.js"></script>
     </body>
 </html>
