--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>My JS website</title>
+        <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
         <nav class="navbar">
