--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
+        <div class="image-container"></div> 
         <script type="module" src ="main.js"></script>
     </body>
 </html>
