--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
                 <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
-        <div class="image-container"></div> 
-        <script type="module" src ="main.js"></script>
+        <div class="image-container"> 
+            <script type="module" src ="main.js"></script>
+        </div>
     </body>
 </html>
