--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="code.html">Three.JS code</li>
             </ul>
         </nav>
         <div class="image-container"> 
