--- a/code.html
+++ b/code.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>My JS website</title>
+        <link rel = "stylesheet" href = "style.css">
+    </head>
+    <body>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="code.html">Three.JS code</li>
+            </ul>
+        </nav>
+        <!-- paste code and description here -->
+    </body>
+</html>
