--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
                 <li><a href="code.html">Three.JS code</li>
             </ul>
         </nav>
-        <div class="image-container"> 
-            <script type="module" src ="main.js"></script>
-        </div>
+        <div class="image-container"></div>
+        <script type="module" src ="main.js"></script>
     </body>
 </html>
