--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="code.html">Three.JS code</li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
         <div class="image-container"></div>
