--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <body>
         <div class="image-container"></div>
         <script type="module" src ="main.js"></script>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="code.html">Three.JS code</li>
+            </ul>
+        </nav>
     </body>
 </html>
