--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="code.html">Three.JS code</li>
+                <li><a href="code.html">Three.JS code</a></li>
             </ul>
         </nav>
     </body>
