--- a/code.html
+++ b/code.html
@@ -11,6 +11,10 @@
                 <li><a href="code.html">Three.JS code</li>
             </ul>
         </nav>
-        <!-- paste code and description here -->
+        <div class="code-container">
+            <p>
+                blah blah
+            </p>
+        </div>
     </body>
 </html>
