--- a/code.html
+++ b/code.html
@@ -12,9 +12,7 @@
             </ul>
         </nav>
         <div class="code-container">
-            <p>
-                blah blah
-            </p>
+             <embed src="code.txt" width=
         </div>
     </body>
 </html>
