--- a/code.html
+++ b/code.html
@@ -12,7 +12,7 @@
             </ul>
         </nav>
         <div class="code-container">
-             <embed src="code.txt" width=
+             <embed src="code.txt">
         </div>
     </body>
 </html>
