--- a/code.html
+++ b/code.html
@@ -12,7 +12,7 @@
             </ul>
         </nav>
         <div class="code-container">
-             <embed src="code.txt">
+             <embed src="code.txt" width="100%" height="100%" type="text/plain">
         </div>
     </body>
 </html>
